--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 src="./assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
-                onclick="location.href='https://patilom2114.github.io/Poster/#/'"
+                onclick="location.href='https://www.justpostit.pictures/'"
               
               />
             </div>
@@ -390,7 +390,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://patilom2114.github.io/Poster/#/'"
+                onclick="location.href='https://www.justpostit.pictures/'"
               >
                 Live Demo
               </button>
